--- a/css/main.css
+++ b/css/main.css
@@ -23,8 +23,11 @@ Rain CSS Coding Standards outlined at http://standards.mediarain.com/html-css
 ************************************/
 
 
+html {
+	background: #BAA583;
+}
 body {
-	background: #ffffff; /* Old browsers */
+	background: #BAA583; /* Old browsers */
 	background: -moz-linear-gradient(top, #ffffff 0%, #baa583 40%, #baa583 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(40%,#baa583), color-stop(100%,#baa583)); /* Chrome,Safari4+ */
 	background: -webkit-linear-gradient(top, #ffffff 0%,#baa583 40%,#baa583 100%); /* Chrome10+,Safari5.1+ */
@@ -432,6 +435,91 @@ ul.image-carousel li.last-active{
 	height: 50px;
 	text-indent: -9999px;
 	margin: 20px 0px 15px;
+}
+
+
+
+/*******************************************
+
+	@Section: Details Page
+
+*******************************************/
+
+
+
+#service-details #content {
+	margin-top: 50px;
+}
+#service-details .left-side {
+	float: left;
+	width: 360px;
+	padding-right: 40px;
+	margin-bottom: 50px;
+}
+#service-details h3 {
+	margin-bottom: 40px;
+	width: 360px;
+	text-indent: -9999px;
+	margin-right: 440px;
+}
+#service-details h3.consultant-header {
+	background: url(../img/text-consultant2.png) no-repeat 0px 0px;
+	height: 43px;
+	width: 809px;
+	margin-right: 0px;
+}
+#service-details h3.decorations-header {
+	background: url(../img/text-decorations.png) no-repeat 0px 0px;
+	height: 43px;
+	width: 809px;
+	margin-right: 0px;
+}
+#service-details h3.packages-header {
+	background: url(../img/text-packages.png) no-repeat center 0px;
+	height: 50px;
+}
+#service-details h3.invitations-header {
+	background: url(../img/text-invitations.png) no-repeat center 0px;
+	height: 28px;
+}
+#service-details h3.specialEvents-header {
+	background: url(../img/text-specialEvents.png) no-repeat center 0px;
+	height: 50px;
+}
+#service-details h3.floral-header {
+	background: url(../img/header-flowers-1.png) no-repeat center 0px;
+	height: 35px;
+}
+#service-details h3.cake-header {
+	background: url(../img/text-cakes.png) no-repeat center 0px;
+	height: 35px;
+}
+#service-details h3.music-header {
+	background: url(../img/text-music.png) no-repeat center 0px;
+	height: 29px;
+}
+#service-details h3.lighting-header {
+	background: url(../img/text-lighting.png) no-repeat center 0px;
+	height: 50px;
+}
+#service-details h3.catering-header {
+	background: url(../img/text-catering.png) no-repeat center 0px;
+	height: 44px;
+}
+#service-details .left-side p {
+	line-height: 1.6;
+	text-align: center;
+}
+#service-details .right-side {
+	float: right;
+	width: 400px;
+	margin-bottom: 50px;
+}
+#service-details .right-side img {
+	width: 400px;
+}
+#service-details .lower-half {
+	margin-bottom: 60px;
 }
 
 
