--- a/css/main.css
+++ b/css/main.css
@@ -428,7 +428,29 @@ ul.image-carousel li.last-active{
 *******************************************/
 
 
-#service-details #content { margin-top: 50px; }
+#service-details #content {
+	margin: -80px auto 100px;
+	padding: 150px 25px 1px;
+	font-size: 18px;
+	background: #BAA583; /* Old browsers */
+	background: -moz-linear-gradient(top, #baa583 0%, #D0C2AA 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#baa583), color-stop(100%,#D0C2AA)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#baa583', endColorstr='#D0C2AA',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* W3C */
+	box-shadow: 0px 5px 12px #333333;
+	-moz-box-shadow: 0px 5px 12px #333333;
+	-webkit-box-shadow: 0px 5px 12px #333333;
+	-webkit-border-bottom-right-radius: 20px;
+	-webkit-border-bottom-left-radius: 20px;
+	-moz-border-radius-bottomright: 20px;
+	-moz-border-radius-bottomleft: 20px;
+	border-bottom-right-radius: 20px;
+	border-bottom-left-radius: 20px;
+	behavior: url(PIE.htc);
+}
 #service-details .left-side {
 	float: left;
 	width: 360px;
@@ -518,14 +540,15 @@ ul.img-row li {
 	float: left;
 	margin-left: 80px;
 }
+.cakes ul.img-row li { margin-left: 117px; }
 .catering ul.img-row li { margin-left: 155px; }
 .music ul.img-row li { margin-left: 197px; }
 .specialEvents ul.img-row li { margin-left: 40px; }
 ul.img-row li:first-child { margin-left: 0px; }
 ul.img-row li img {
-	box-shadow: -1px 0px 2px #333333;
-	-moz-box-shadow: -1px 0px 2px #333333;
-	-webkit-box-shadow: -1px 0px 2px #333333;
+	box-shadow: 0px 5px 12px #333333;
+	-moz-box-shadow: 0px 5px 12px #333333;
+	-webkit-box-shadow: 0px 5px 12px #333333;
 	behavior: url(PIE.htc);
 }
 #service-details .deets-container-1 p, .deets-container-2 p {
@@ -535,7 +558,7 @@ ul.img-row li img {
 }
 #service-details .deets-container-1 p.fancy {
 	font-style: italic;
-	font-size: 18px;
+	font-size: 24px;
 	line-height: 2;
 }
 #service-details .deets-container-1 ul {
@@ -576,18 +599,40 @@ ul.pricing li {
 	margin-bottom: 10px;
 }
 #service-details .deets-container-1, #service-details .deets-container-2 {
-	background: none repeat scroll 0 0 #ededed;
 	margin-bottom: 60px;
 	padding: 25px 50px 10px;
-	width: 350px;
+	width: 650px;
 	margin: 0px auto 60px;
-	border-radius: 20px 0 20px 0;
-	-moz-border-radius: 20px 0 20px 0;
-	-webkit-border-radius: 20px 0 20px 0;
-	box-shadow: -1px 0px 2px #333333;
-	-moz-box-shadow: -1px 0px 2px #333333;
-	-webkit-box-shadow: -1px 0px 2px #333333;
+	box-shadow: 0px 5px 12px #333333;
+	-moz-box-shadow: 0px 5px 12px #333333;
+	-webkit-box-shadow: 0px 5px 12px #333333;
+	
+	background: #BAA583; /* Old browsers */
+	background: -moz-linear-gradient(top, #baa583 0%, #D0C2AA 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#baa583), color-stop(100%,#D0C2AA)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#baa583', endColorstr='#D0C2AA',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* W3C */
+	
 	behavior: url(PIE.htc);
+}
+#service-details .deets-container-1 {
+	-webkit-border-top-left-radius: 20px;
+	-webkit-border-top-right-radius: 20px;
+	-moz-border-radius-topleft: 20px;
+	-moz-border-radius-topright: 20px;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+}
+#service-details .deets-container-2 {
+	-webkit-border-bottom-right-radius: 20px;
+	-webkit-border-bottom-left-radius: 20px;
+	-moz-border-radius-bottomright: 20px;
+	-moz-border-radius-bottomleft: 20px;
+	border-bottom-right-radius: 20px;
+	border-bottom-left-radius: 20px;
 }
 p.diy span, p.a-la-carte span, p.whole-package span {
 	display: block;
