--- a/css/main.css
+++ b/css/main.css
@@ -433,13 +433,13 @@ ul.image-carousel li.last-active{
 	padding: 150px 25px 1px;
 	font-size: 18px;
 	background: #BAA583; /* Old browsers */
-	background: -moz-linear-gradient(top, #baa583 0%, #D0C2AA 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#baa583), color-stop(100%,#D0C2AA)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* Opera11.10+ */
-	background: -ms-linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#baa583', endColorstr='#D0C2AA',GradientType=0 ); /* IE6-9 */
-	background: linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* W3C */
+	background: -moz-linear-gradient(top, #824F3E 0%, #D0C2AA 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#824F3E), color-stop(100%,#D0C2AA)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #824F3E 0%,#D0C2AA 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #824F3E 0%,#D0C2AA 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #824F3E 0%,#D0C2AA 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#824F3E', endColorstr='#D0C2AA',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #824F3E 0%,#D0C2AA 100%); /* W3C */
 	box-shadow: 0px 5px 12px #333333;
 	-moz-box-shadow: 0px 5px 12px #333333;
 	-webkit-box-shadow: 0px 5px 12px #333333;
@@ -521,7 +521,7 @@ a.btn-back {
 	height: 15px;
 	text-indent: -9999px;
 	float: left;
-	margin-top: -50px;
+	margin: -75px 0 0 30px;
 }
 /*
 a.btn-back:hover {
@@ -617,17 +617,9 @@ ul.pricing li {
 	background: -ms-linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* IE10+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#baa583', endColorstr='#D0C2AA',GradientType=0 ); /* IE6-9 */
 	background: linear-gradient(top, #baa583 0%,#D0C2AA 100%); /* W3C */
-	
 	behavior: url(PIE.htc);
 }
-#service-details .deets-container-1 {
-	-webkit-border-top-left-radius: 20px;
-	-webkit-border-top-right-radius: 20px;
-	-moz-border-radius-topleft: 20px;
-	-moz-border-radius-topright: 20px;
-	border-top-left-radius: 20px;
-	border-top-right-radius: 20px;
-}
+
 #service-details .deets-container-2 {
 	-webkit-border-bottom-right-radius: 20px;
 	-webkit-border-bottom-left-radius: 20px;
@@ -635,6 +627,15 @@ ul.pricing li {
 	-moz-border-radius-bottomleft: 20px;
 	border-bottom-right-radius: 20px;
 	border-bottom-left-radius: 20px;
+	background: #BAA583; /* Old browsers */
+	background: -moz-linear-gradient(top, #D0C2AA 0%, #baa583 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#D0C2AA), color-stop(100%,#baa583)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #D0C2AA 0%,#baa583 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #D0C2AA 0%,#baa583 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #D0C2AA 0%,#baa583 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#D0C2AA', endColorstr='#baa583',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #D0C2AA 0%,#baa583 100%); /* W3C */
+	behavior: url(PIE.htc);
 }
 p.diy span, p.a-la-carte span, p.whole-package span {
 	display: block;
