--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,11 @@
     	black: #000000
     	 gray: #333333
 
+	Font Reference:
+	Rosario
+	Antic
+	sans-serif
+
 ********************************************************************************/
 /************************************
 
@@ -36,7 +41,7 @@ body {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#baa583',GradientType=0 ); /* IE6-9 */
 	background: linear-gradient(top, #ffffff 0%,#baa583 40%,#baa583 100%); /* W3C */
 	color: #000000;
-	font-family: helvetica;
+	font-family: 'Rosario', sans-serif;
 	font-size: 12px;
 	height: 100%;
 	behavior: url(../PIE.htc);
@@ -463,9 +468,10 @@ ul.image-carousel li.last-active{
 }
 #service-details h4 {
 	font-size: 24px;
-	margin-bottom: 40px;
+	margin-bottom: 70px;
 	float: left;
 	width: 150px;
+	padding-top: 6px;
 }
 #service-details h3.consultant-header {
 	background: url(../img/text-consultant2.png) no-repeat 0px 0px;
@@ -573,7 +579,7 @@ ul.img-row li img {
 }
 ul.price-description {
 	float: left;
-	width: 125px;
+	width: 275px;
 }
 ul.price-description li {
 	text-align: right;
@@ -582,7 +588,7 @@ ul.price-description li {
 }
 ul.pricing {
 	float: right;
-	width: 125px;
+	width: 275px;
 }
 ul.pricing li {
 	text-align: left;
@@ -597,14 +603,13 @@ ul.pricing li {
 	font-style: italic;
 	text-transform: uppercase;
 }
-#service-details .deets-container-2 ul li {
-	margin-bottom: 10px;
-}
+#service-details .deets-container-2 ul li { margin-bottom: 10px; }
 #service-details .deets-container-1, #service-details .deets-container-2 {
 	margin-bottom: 60px;
 	padding: 25px 50px 10px;
 	width: 650px;
 	margin: 0px auto 60px;
+	font-size: 24px;
 	box-shadow: 0px 5px 12px #333333;
 	-moz-box-shadow: 0px 5px 12px #333333;
 	-webkit-box-shadow: 0px 5px 12px #333333;
@@ -639,22 +644,12 @@ ul.pricing li {
 p.diy span, p.a-la-carte span, p.whole-package span {
 	display: block;
 	float: left;
-	width: 70px;
+	width: 125px;
 	height: 100px;
 	margin-right: 40px;
 }
-p.diy span, p.diy b {
-	color: #75923C;
-	font-weight: bold;
-}
-p.a-la-carte span, p.a-la-carte b {
-	color: #C0504D;
-	font-weight: bold;
-}
-p.whole-package span, p.whole-package b {
-	color: #0171C0;
-	font-weight: bold;
-}
+p.diy span, p.diy b, p.a-la-carte span, p.a-la-carte b, p.whole-package span, p.whole-package b { font-weight: bold; }
+p.diy span, p.a-la-carte span, p.whole-package span, { font-style: oblique; }
 
 
 /*******************************************
@@ -681,18 +676,7 @@ pre {
 	background: #f2f2f2;
 	padding: 10px;
 }
-#gallery {
-	border: 1px solid #000000;
-	border-radius: 10px;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-	padding: 30px 100px;
-	margin: 25px auto 75px;
-	box-shadow: 0px 5px 12px #000000;
-	-moz-box-shadow: 0px 5px 12px #000000;
-	-webkit-box-shadow: 0px 5px 12px #000000;
-	behavior: url(PIE.htc);
-}
+#gallery { margin: 25px auto 75px; }
 
 
 /*******************************************
@@ -719,20 +703,21 @@ pre {
 	width: 334px;
 	height: 48px;
 	text-indent: -9999px;
-	margin-top: 165px;
+	margin-top: 100px;
 }
 #contact-us #content .phone, #contact-us #content .email {
 	font-size: 24px;
 	padding-bottom: 15px;
 }
-#contact-us #content .phone {
-}
-#contact-us #content .email a:hover {
-	text-decoration: underline;
-}
+#contact-us #content .phone {}
+#contact-us #content .email a:hover { text-decoration: underline; }
 #contact-us #content .column-2 {
 	background: url(../img/contact-img-1.jpg) no-repeat;
-	width: 300px;
-	height: 389px;
+	width: 250px;
+	height: 324px;
 	float: right;
+	margin-right: 5px;
+	box-shadow: 3px 3px 8px #333;
+	-moz-box-shadow: 3px 3px 8px #333;
+	-webkit-box-shadow: 3px 3px 8px #333;
 }
