--- a/css/jquery.ad-gallery.css
+++ b/css/jquery.ad-gallery.css
@@ -1,5 +1,5 @@
 .ad-gallery {
-	width: 600px;
+	width: 800px;
 }
 .ad-gallery, .ad-gallery * {
 	margin: 0;
@@ -7,8 +7,8 @@
 }
 .ad-gallery .ad-image-wrapper {
 	width: 100%;
-	height: 400px;
-	margin-bottom: 10px;
+	height: 600px;
+	margin-top: 32px;
 	position: relative;
 	overflow: hidden;
 }
