--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,6 @@
 
 ************************************/
 
-
 html {
 	background: #BAA583; /* Old browsers */
 	background: -moz-linear-gradient(top, #ffffff 0%, #baa583 40%, #baa583 100%); /* FF3.6+ */
@@ -46,52 +45,78 @@ body {
 	height: 100%;
 	behavior: url(../PIE.htc);
 }
-a {
-	text-decoration: none;
-	outline: none;
-	overflow: hidden;
-	color: #000000;
-}
-a:hover {
-	text-decoration: none;
-	outline: none;
-	overflow: hidden;
-}
-a:active {
-	text-decoration: none;
-	outline: none;
-	overflow: hidden;
-}
-a:visited {
+a { color: #000000;}
+a, a:hover, a:active, a:visited {
 	text-decoration: none;
 	outline: none;
 	overflow: hidden;
 }
 sup { font-size: 60%; vertical-align: top;}
 .clear { clear: both; display: block;}
-
-
-/*******************************************
-
-	@Section: Type
-
-*******************************************/
-
-
 b { font-weight: 700;}
 em { font-style: oblique;}
-h1 {}
-h2 {}
-h3 {}
-p {}
-
+.frame {
+	position: fixed;
+	top: 0px;
+	height: 100%;
+	z-index: 1000;
+}
+#rpt-rose-right {
+	background: url(../img/rpt-rose-right.png) repeat-y 0px 0px;
+	right: 0px;
+	width: 79px;
+}
+#rpt-rose-left {
+	background: url(../img/rpt-rose-left.png) repeat-y 0px 0px;
+	left: 0px;
+	width: 79px;
+}
+#rpt-red-ribbon-right {
+	background: url(../img/rpt-red-ribbon-right.png) repeat-y 0px 0px;
+	right: 0px;
+	width: 81px;
+}
+#rpt-red-ribbon-left {
+	background: url(../img/rpt-red-ribbon-left.png) repeat-y 0px 0px;
+	left: 0px;
+	width: 81px;
+}
+#rpt-gold-ribbon-right {
+	background: url(../img/rpt-gold-ribbon-right.png) repeat-y 0px 0px;
+	right: 0px;
+	width: 81px;
+}
+#rpt-gold-ribbon-left {
+	background: url(../img/rpt-gold-ribbon-left.png) repeat-y 0px 0px;
+	left: 0px;
+	width: 81px;
+}
+.background {
+	background: #ffffff;
+	opacity: 0.6;
+	filter:alpha(opacity=60);
+	filter: “alpha(opacity=60)”;
+	box-shadow: 0px 0px 20px #ffffff;
+	width: 750px;
+	height: 100%;
+	display: block;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	box-shadow: 0px 0px 20px #ffffff;
+	-moz-box-shadow: 0px 0px 20px #ffffff;
+	-webkit-box-shadow: 0px 0px 20px #ffffff;
+	border-radius: 20px;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	z-index: -1;
+}
 
 /*******************************************
 
 	@Section: Forms
 
 *******************************************/
-
 
 #contact-us form {
 	clear: both;
@@ -103,7 +128,7 @@ p {}
 	float: left;
 	margin-bottom: 15px;
 }
-.form-field-1 { margin-bottom: 7px; }
+.form-field-1 { margin-bottom: 7px;}
 .form-field-1 label {
 	width: 80px;
 	padding: 5px 0px 0 0;
@@ -111,12 +136,12 @@ p {}
 	float: left;
 	font-weight: bold;
 }
-.form-field-1 input { width: 250px; }
+.form-field-1 input { width: 250px;}
 #contact-us form input.submit {
 	margin-top: 10px;
 	width: 75px;
 }
-#contact-us form .section-two p { margin-bottom: 6px; }
+#contact-us form .section-two p { margin-bottom: 6px;}
 .form-field-2 {
 	float: left;
 	width: 130px;
@@ -142,21 +167,19 @@ span#sprytextarea_comments textarea {
     color: #CC3333;
     display: inline;
 }
-.textfieldValidState input, input.textfieldValidState { background-color: #B8F5B1; }
+.textfieldValidState input, input.textfieldValidState { background-color: #B8F5B1;}
 input.textfieldRequiredState, .textfieldRequiredState input, input.textfieldInvalidFormatState, .textfieldInvalidFormatState input, input.textfieldMinValueState, .textfieldMinValueState input, input.textfieldMaxValueState, .textfieldMaxValueState input, input.textfieldMinCharsState, .textfieldMinCharsState input, input.textfieldMaxCharsState, .textfieldMaxCharsState input {
 	background-color: #FF9F9F;
 }
-.textfieldFocusState input, input.textfieldFocusState { background-color: #FFFFCC; }
-.textfieldFlashText input, input.textfieldFlashText { color: red !important; }
+.textfieldFocusState input, input.textfieldFocusState { background-color: #FFFFCC;}
+.textfieldFlashText input, input.textfieldFlashText { color: red !important;}
 .textfieldHintState input, input.textfieldHintState {}
-
 
 /*******************************************
 
 	@Section: Header
 
 *******************************************/
-
 
 div#header-container {
 	background: url(../img/header-bg.png) no-repeat center 0px;
@@ -179,13 +202,11 @@ header a#logo {
 	margin: 10px auto 0px;
 }
 
-
 /*******************************************
 
 	@Section: Navigation
 
 *******************************************/
-
 
 #main-nav {
 	width: 510px;
@@ -236,13 +257,11 @@ header a#logo {
 }
 #main-nav #nav-4 a:hover, #main-nav #nav-4.current a { background: url(../img/main-nav.png) no-repeat -412px -42px;}
 
-
 /*******************************************
 
 	@Section: Footer
 
 *******************************************/
-
 
 footer {
 	width: 715px;
@@ -264,8 +283,7 @@ footer ul#footer-nav li a {
 	color: #000000;
 	margin-left: 10px;
 }
-footer ul#footer-nav li a:hover { text-decoration: underline; }
-
+footer ul#footer-nav li a:hover { text-decoration: underline;}
 
 /*******************************************
 
@@ -273,61 +291,6 @@ footer ul#footer-nav li a:hover { text-decoration: underline; }
 
 *******************************************/
 
-
-.frame {
-	position: fixed;
-	top: 0px;
-	height: 100%;
-	z-index: 1000;
-}
-#rpt-rose-right {
-	background: url(../img/rpt-rose-right.png) repeat-y 0px 0px;
-	right: 0px;
-	width: 79px;
-}
-#rpt-rose-left {
-	background: url(../img/rpt-rose-left.png) repeat-y 0px 0px;
-	left: 0px;
-	width: 79px;
-}
-#rpt-red-ribbon-right {
-	background: url(../img/rpt-red-ribbon-right.png) repeat-y 0px 0px;
-	right: 0px;
-	width: 81px;
-}
-#rpt-red-ribbon-left {
-	background: url(../img/rpt-red-ribbon-left.png) repeat-y 0px 0px;
-	left: 0px;
-	width: 81px;
-}
-#rpt-gold-ribbon-right {
-	background: url(../img/rpt-gold-ribbon-right.png) repeat-y 0px 0px;
-	right: 0px;
-	width: 81px;
-}
-#rpt-gold-ribbon-left {
-	background: url(../img/rpt-gold-ribbon-left.png) repeat-y 0px 0px;
-	left: 0px;
-	width: 81px;
-}
-.background {
-	background: #ffffff;
-	opacity: 0.7;
-	box-shadow: 0px 0px 20px #ffffff;
-	width: 750px;
-	height: 100%;
-	display: block;
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	box-shadow: 0px 0px 20px #ffffff;
-	-moz-box-shadow: 0px 0px 20px #ffffff;
-	-webkit-box-shadow: 0px 0px 20px #ffffff;
-	border-radius: 20px;
-	-webkit-border-radius: 20px;
-	-moz-border-radius: 20px;
-	z-index: -1;
-}
 div#content {
 	width: 809px;
 	margin: auto;
@@ -347,10 +310,7 @@ ul.image-carousel li {
 	display: none;
 	z-index: 8;
 }
-ul.image-carousel li.active{
-	z-index: 10;
-	display: block;
-}
+ul.image-carousel li.active{ z-index: 10; display: block;}
 ul.image-carousel li.last-active{
 	z-index: 9;
 	position: absolute;
@@ -366,13 +326,11 @@ ul.image-carousel li.last-active{
 	margin: 0 auto 150px;
 }
 
-
 /*******************************************
 
 	@Section: Home Page Content
 
 *******************************************/
-
 
 #services ul.services-list{
 	width: 650px;
@@ -433,8 +391,8 @@ ul.image-carousel li.last-active{
 #services ul.services-list li.packages h3 a {
 	background: url(../img/text-packages.png) no-repeat;
 	display: block;
-	width: 150px;
-	height: 50px;
+	width: 132px;
+	height: 44px;
 	text-indent: -9999px;
 	margin: 20px 0px 15px;
 }
@@ -473,19 +431,17 @@ ul.image-carousel li.last-active{
 #services ul.services-list li.lighting h3 a {
 	background: url(../img/text-lighting.png) no-repeat;
 	display: block;
-	width: 148px;
-	height: 50px;
+	width: 296px;
+	height: 45px;
 	text-indent: -9999px;
 	margin: 20px 0px 15px;
 }
-
 
 /*******************************************
 
 	@Section: Details Page Main
 
 *******************************************/
-
 
 #service-details #content {
 	margin: -80px auto 100px;
@@ -535,11 +491,12 @@ ul.image-carousel li.last-active{
 #service-details h3.decorations-header {
 	background: url(../img/text-decorations.png) no-repeat 0px 0px;
 	height: 43px;
-	width: 809px;
+	width: 372px;
 }
 #service-details h3.packages-header {
-	background: url(../img/text-packages.png) no-repeat center 0px;
-	height: 50px;
+	background: url(../img/text-packages2.png) no-repeat center 0px;
+	width: 140px;
+	height: 52px;
 }
 #service-details h3.invitations-header {
 	background: url(../img/text-invitations.png) no-repeat center 0px;
@@ -566,8 +523,9 @@ ul.image-carousel li.last-active{
 	height: 53px;
 }
 #service-details h3.lighting-header {
-	background: url(../img/text-lighting.png) no-repeat center 0px;
-	height: 50px;
+	background: url(../img/text-lighting2.png) no-repeat center 0px;
+	width: 303px;
+	height: 53px;
 }
 #service-details h3.catering-header {
 	background: url(../img/text-catering2.png) no-repeat center 0px;
@@ -581,7 +539,7 @@ a.btn-back {
 	height: 15px;
 	text-indent: -9999px;
 	float: left;
-	margin: -75px 0 0 30px;
+	margin: -70px 0 0 30px;
 }
 /*
 a.btn-back:hover {
@@ -589,28 +547,28 @@ a.btn-back:hover {
 }
 */
 
-
 /*******************************************
 
 	@Section: Details Page, Layout 1
 
 *******************************************/
 
-
-ul.img-row { margin: 0 25px 60px 29px; }
-ul.img-row li {
-	float: left;
-	margin-left: 53px;
+ul.img-row { margin: 0 25px 60px 29px; position: relative;}
+ul.img-row li#img-1 { float: left; margin-top: 10px; position: relative;}
+ul.img-row li#img-2 {
+	position: absolute;
+	top: 30px;
+	left: 377px;
+	margin-left: -132px;
+	z-index: 10;
 }
-.cakes ul.img-row li { margin-left: 90px; }
-.catering ul.img-row li { margin-left: 129px; }
-.music ul.img-row li { margin-left: 170px; }
-.specialEvents ul.img-row li { margin-left: 12px; }
-ul.img-row li:first-child { margin-left: 0px; }
+ul.img-row li#img-3 { float: right; position: relative;}
 ul.img-row li img {
-	box-shadow: 0px 5px 12px #333333;
-	-moz-box-shadow: 0px 5px 12px #333333;
-	-webkit-box-shadow: 0px 5px 12px #333333;
+	width: 255px;
+	border: 5px solid #fffbe6;
+	box-shadow: 1px 5px 12px #000000;
+	-moz-box-shadow: 1px 5px 12px #000000;
+	-webkit-box-shadow: 1px 5px 12px #000000;
 	behavior: url(PIE.htc);
 }
 #service-details .deets-container-1 p, .deets-container-2 p {
@@ -629,19 +587,13 @@ ul.img-row li img {
 	margin-bottom: 30px;
 	font-style: italic;
 }
-ul.price-description {
-	float: left;
-	width: 275px;
-}
+ul.price-description { float: left; width: 275px;}
 ul.price-description li {
 	text-align: right;
 	text-transform: none;
 	color: #000000;
 }
-ul.pricing {
-	float: right;
-	width: 275px;
-}
+ul.pricing { float: right; width: 275px;}
 ul.pricing li {
 	text-align: left;
 	text-transform: none;
@@ -652,9 +604,8 @@ ul.pricing li {
 	text-align: center;
 	margin-bottom: 30px;
 	font-style: italic;
-	text-transform: uppercase;
 }
-#service-details .deets-container-2 ul li { margin-bottom: 10px; }
+#service-details .deets-container-2 ul li { margin-bottom: 10px;}
 #service-details .deets-container-1, #service-details .deets-container-2 {
 	margin-bottom: 60px;
 	padding: 25px 50px 10px;
@@ -669,7 +620,6 @@ ul.pricing li {
 	-webkit-box-shadow: 0px 0px 20px #ffffff;
 	-moz-box-shadow: 0px 0px 20px #ffffff;
 }
-
 #service-details .deets-container-2 {
 	-webkit-border-bottom-right-radius: 20px;
 	-webkit-border-bottom-left-radius: 20px;
@@ -688,19 +638,8 @@ p.diy span, p.a-la-carte span, p.whole-package span {
 	height: 100px;
 	margin-right: 40px;
 }
-p.diy span, p.diy b, p.a-la-carte span, p.a-la-carte b, p.whole-package span, p.whole-package b { font-weight: bold; }
-p.diy span, p.a-la-carte span, p.whole-package span, { font-style: oblique; }
-
-
-/*******************************************
-
-	@Section: Details Page, Layout 2
-
-*******************************************/
-
-
-
-
+p.diy span, p.diy b, p.a-la-carte span, p.a-la-carte b, p.whole-package span, p.whole-package b { font-weight: bold;}
+p.diy span, p.a-la-carte span, p.whole-package span, { font-style: oblique;}
 
 /*******************************************
 
@@ -708,16 +647,14 @@ p.diy span, p.a-la-carte span, p.whole-package span, { font-style: oblique; }
 
 *******************************************/
 
-
-ul.ad-thumb-list { list-style-image:url(list-style.gif); }
+ul.ad-thumb-list { list-style-image:url(list-style.gif);}
 pre {
 	font-family: "Lucida Console", "Courier New", Verdana;
 	border: 1px solid #CCC;
 	background: #f2f2f2;
 	padding: 10px;
 }
-#gallery { margin: 25px auto 75px; }
-
+#gallery { margin: 25px auto 75px;}
 
 /*******************************************
 
@@ -725,8 +662,7 @@ pre {
 
 *******************************************/
 
-
-#contact-us #content { margin-top: 80px; }
+#contact-us #content { margin-top: 80px;}
 #contact-us #content .column-1 {
 	float: left;
 	width: 500px;
